objects/Account.object
<CustomObject>
    <fields>
        <fullName>CEP__c</fullName>
        <label>CEP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDD__c</fullName>
        <label>DDD</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identifica_o_do_Restaurante__c</fullName>
        <label>Identificação do Restaurante</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LUC__c</fullName>
        <label>LUC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmento3__c</fullName>
        <inlineHelpText>Selecione o tipo de atividade</inlineHelpText>
        <label>Segmento3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACESSÓRIOS E ARTIGOS PARA VIAGENS</fullName>
                </value>
                <value>
                    <fullName>ACESSÓRIOS P/ VESTUÁRIO</fullName>
                </value>
                <value>
                    <fullName>ACESSÓRIOS PARA DECORAÇÃO</fullName>
                </value>
                <value>
                    <fullName>ANTENAS E OPERADORAS</fullName>
                </value>
                <value>
                    <fullName>ARTIGOS ELETRÔNICOS</fullName>
                </value>
                <value>
                    <fullName>ARTIGOS ESPORTIVOS</fullName>
                </value>
                <value>
                    <fullName>ARTIGOS INFANTIS</fullName>
                </value>
                <value>
                    <fullName>BIJOUTERIAS</fullName>
                </value>
                <value>
                    <fullName>BRINQUEDOS</fullName>
                </value>
                <value>
                    <fullName>CAFETERIAS</fullName>
                </value>
                <value>
                    <fullName>CALÇADOS ESPORTIVOS (TÊNIS)</fullName>
                </value>
                <value>
                    <fullName>CALÇADOS FEMININOS</fullName>
                </value>
                <value>
                    <fullName>CALÇADOS GERAL</fullName>
                </value>
                <value>
                    <fullName>CALÇADOS INFANTIS</fullName>
                </value>
                <value>
                    <fullName>CALÇADOS MASCULINOS</fullName>
                </value>
                <value>
                    <fullName>CALÇADOS ORTOPÉDICOS</fullName>
                </value>
                <value>
                    <fullName>CAMA/MESA/BANHO</fullName>
                </value>
                <value>
                    <fullName>COLCHÕES (NOVO)</fullName>
                </value>
                <value>
                    <fullName>COSMÉTICOS</fullName>
                </value>
                <value>
                    <fullName>ELETRODOMÉSTICOS</fullName>
                </value>
                <value>
                    <fullName>FAST-FOOD</fullName>
                </value>
                <value>
                    <fullName>INFORMÁTICA</fullName>
                </value>
                <value>
                    <fullName>JOALHERIAS</fullName>
                </value>
                <value>
                    <fullName>LIVRARIA</fullName>
                </value>
                <value>
                    <fullName>MAQUIAGEM</fullName>
                </value>
                <value>
                    <fullName>MARCA PRÓPRIA</fullName>
                </value>
                <value>
                    <fullName>MODA ÍNTIMA (LINGERIE/MEIAS)</fullName>
                </value>
                <value>
                    <fullName>MODA JOVEM (UNISSEX)</fullName>
                </value>
                <value>
                    <fullName>MODA PRAIA (BIQ./MAIÔS/SUNGAS)</fullName>
                </value>
                <value>
                    <fullName>MÓVEIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_AccountRecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Apelido__c</fullName>
        <label>Apelido</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Av_Rua__c</fullName>
        <label>Av./Rua</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Bairro__c</fullName>
        <label>Bairro</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Baixou_Aplicativo__c</fullName>
        <label>Baixou Aplicativo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_CNPJ__c</fullName>
        <externalId>true</externalId>
        <label>CNPJ</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_CPF__c</fullName>
        <externalId>true</externalId>
        <label>CPF</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Celular__c</fullName>
        <label>Celular</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TW1_Cidade__c</fullName>
        <label>Cidade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Loja__c</fullName>
        <externalId>true</externalId>
        <label>Código Loja</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Pessoa__c</fullName>
        <externalId>true</externalId>
        <label>Código Pessoa</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Complemento__c</fullName>
        <label>Complemento</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Conta_convertida__c</fullName>
        <label>Conta convertida</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
                <value>
                    <fullName>Sim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Correspondencia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correspondência</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_DDI__c</fullName>
        <defaultValue>55</defaultValue>
        <label>DDI</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Nascimento__c</fullName>
        <label>Data de Nascimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_conversao__c</fullName>
        <label>Data de conversão</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_emissao__c</fullName>
        <label>Data de emissão</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_fechamento__c</fullName>
        <label>Data de Fechamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_inauguracao__c</fullName>
        <label>Data de Inauguração</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_EmailCB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Email__c</fullName>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TW1_Email_comercial__c</fullName>
        <label>E-mail comercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TW1_Empreendimento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Empreendimento</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Contas</relationshipLabel>
        <relationshipName>Contas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Especialidade__c</fullName>
        <label>Especialidade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Estado__c</fullName>
        <label>Estado</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Estado_civil__c</fullName>
        <label>Estado civil</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solteiro(a)</fullName>
                </value>
                <value>
                    <fullName>Casado(a)</fullName>
                </value>
                <value>
                    <fullName>Viúvo(a)</fullName>
                </value>
                <value>
                    <fullName>Divorciado(a)</fullName>
                </value>
                <value>
                    <fullName>União estável</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                    <isActive>false</isActive>
                    <label>Outros</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Fidelidade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fidelidade</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Esse cliente já possui registro de Fidelidade criado. Não é possível criar um novo registro.</errorMessage>
            <filterItems>
                <field>TW1_Fidelidade__c.TW1_Nome_Cliente__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TW1_Fidelidade__c</referenceTo>
        <relationshipLabel>Cliente</relationshipLabel>
        <relationshipName>TW1_Relation_Fidelidade_Cliente</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Foto__c</fullName>
        <label>Foto</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TW1_Grau_de_instrucao__c</fullName>
        <label>Grau de instrução</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fundamental_Incompleto</fullName>
                    <label>Fundamental - Incompleto</label>
                </value>
                <value>
                    <fullName>Fundamental - Completo</fullName>
                </value>
                <value>
                    <fullName>Médio - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Médio - Completo</fullName>
                </value>
                <value>
                    <fullName>Superior - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Superior - Completo</fullName>
                </value>
                <value>
                    <fullName>Pós-graduação - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Pós-graduação - Completo</fullName>
                </value>
                <value>
                    <fullName>Mestrado - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Mestrado - Completo</fullName>
                </value>
                <value>
                    <fullName>Doutorado - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Doudorado - Completo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Grupo__c</fullName>
        <label>Grupo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONVENIÊNCIA/SERVIÇOS</fullName>
                </value>
                <value>
                    <fullName>LAZER</fullName>
                </value>
                <value>
                    <fullName>LOJAS ÂNCORAS</fullName>
                </value>
                <value>
                    <fullName>LOJAS SATÉLITES</fullName>
                </value>
                <value>
                    <fullName>MEGALOJAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_ID_Externo__c</fullName>
        <externalId>true</externalId>
        <label>ID Externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Shopping__c</fullName>
        <formula>TW1_Shopping__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Shopping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Identidade__c</fullName>
        <label>Identidade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Inscricao_Municipal__c</fullName>
        <label>Inscrição Municipal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Inscricao_estadual__c</fullName>
        <label>Inscrição estadual</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_LUC__c</fullName>
        <label>LUC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Logradouro__c</fullName>
        <label>Logradouro</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Marca_pretendida__c</fullName>
        <label>Marca pretendida</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nacionalidade__c</fullName>
        <label>Nacionalidade</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Naturalidade__c</fullName>
        <label>Naturalidade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_Conta_Unico__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;TW1_Loja&quot;,  Name + &quot; - &quot; + TW1_CNPJ__c,  Name + &quot;-&quot; +   TW1_CPF__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome da Conta Único</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_do_Shopping__c</fullName>
        <label>Nome do Shopping</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_fantasia__c</fullName>
        <label>Nome Fantasia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Numero__c</fullName>
        <label>Número</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Orgao_emissor__c</fullName>
        <label>Orgão emissor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Origem__c</fullName>
        <label>Origem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fraldário</fullName>
                </value>
                <value>
                    <fullName>Concierge</fullName>
                </value>
                <value>
                    <fullName>WIFI</fullName>
                </value>
                <value>
                    <fullName>Telefone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Whatsapp</fullName>
                </value>
                <value>
                    <fullName>Promoção</fullName>
                </value>
                <value>
                    <fullName>Migração</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Pais__c</fullName>
        <label>País</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afeganistão</fullName>
                </value>
                <value>
                    <fullName>África do Sul</fullName>
                </value>
                <value>
                    <fullName>Albânia</fullName>
                </value>
                <value>
                    <fullName>Alemanha</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antiga e Barbuda</fullName>
                </value>
                <value>
                    <fullName>Arábia Saudita</fullName>
                </value>
                <value>
                    <fullName>Argélia</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Arménia</fullName>
                </value>
                <value>
                    <fullName>Austrália</fullName>
                </value>
                <value>
                    <fullName>Áustria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijão</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bangladexe</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Barém</fullName>
                </value>
                <value>
                    <fullName>Bélgica</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benim</fullName>
                </value>
                <value>
                    <fullName>Bielorrússia</fullName>
                </value>
                <value>
                    <fullName>Bolívia</fullName>
                </value>
                <value>
                    <fullName>Bósnia e Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botsuana</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                    <default>true</default>
                    <label>Brasil</label>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgária</fullName>
                </value>
                <value>
                    <fullName>Burquina Faso</fullName>
                </value>
                <value>
                    <fullName>Burúndi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Permite_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permite SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Piso__c</fullName>
        <label>Piso</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Razao_Social__c</fullName>
        <label>Razão Social</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Referencia__c</fullName>
        <label>Referência</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Sala__c</fullName>
        <label>Sala</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Segmento1__c</fullName>
        <description>Selecione o grupo de atividade da loja</description>
        <label>Segmento1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CONVENIÊNCIA/SERVIÇOS</fullName>
                </value>
                <value>
                    <fullName>LAZER</fullName>
                </value>
                <value>
                    <fullName>LOJAS ÂNCORAS</fullName>
                </value>
                <value>
                    <fullName>LOJAS SATÉLITES</fullName>
                </value>
                <value>
                    <fullName>MEGALOJAS</fullName>
                </value>
                <value>
                    <fullName>OUTROS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Segmento2__c</fullName>
        <inlineHelpText>Selecione o Ramo de atividade da loja</inlineHelpText>
        <label>Segmento2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AGÊNCIA DE VIAGENS</fullName>
                </value>
                <value>
                    <fullName>ALIMENTAÇÃO</fullName>
                </value>
                <value>
                    <fullName>ALIMENTOS ESPECIAIS(CONGELADOS/DIETÉTICOS/NATURAIS)</fullName>
                </value>
                <value>
                    <fullName>ARMARINHO</fullName>
                </value>
                <value>
                    <fullName>ARTIGOS DIVERSOS</fullName>
                </value>
                <value>
                    <fullName>ARTIGOS DO LAR</fullName>
                </value>
                <value>
                    <fullName>ARTIGOS ESPORTIVOS</fullName>
                </value>
                <value>
                    <fullName>BAZAR</fullName>
                </value>
                <value>
                    <fullName>BINGO</fullName>
                </value>
                <value>
                    <fullName>BOLICHE</fullName>
                </value>
                <value>
                    <fullName>BRINQUEDOS</fullName>
                </value>
                <value>
                    <fullName>CABELEIREIRO, CLÍNICAS DE ESTÉTICA E PODOLOGIA)</fullName>
                </value>
                <value>
                    <fullName>CALÇADOS</fullName>
                </value>
                <value>
                    <fullName>CASA DE SHOWS</fullName>
                </value>
                <value>
                    <fullName>CENTRO DE CONVENÇÕES/SALA DE CONVENÇÕES</fullName>
                </value>
                <value>
                    <fullName>CHAVEIRO</fullName>
                </value>
                <value>
                    <fullName>CINEMAS</fullName>
                </value>
                <value>
                    <fullName>CONSERTOS</fullName>
                </value>
                <value>
                    <fullName>CONSTRUÇÃO E DECORAÇÃO(NOVO)</fullName>
                </value>
                <value>
                    <fullName>CORREIO</fullName>
                </value>
                <value>
                    <fullName>DELICATESSEN(QUEIJOS/FRIOS/BEBIDAS)</fullName>
                </value>
                <value>
                    <fullName>DIVERSÕES(PARQUES/VIDEOGAMES)</fullName>
                </value>
                <value>
                    <fullName>ELETRODOMÉSTICOS E ELETROELETRÔNICOS</fullName>
                </value>
                <value>
                    <fullName>ELETRODOMESTICOS E ELETROELETRÔNICOS(NOVO)</fullName>
                </value>
                <value>
                    <fullName>FARMÁCIA/DROGRARIA/FARMACIAS ESPECIAIS(HOMEOPATIA /MANIPULAÇÃO/VITAMINAS)</fullName>
                </value>
                <value>
                    <fullName>FLORISTA</fullName>
                </value>
                <value>
                    <fullName>FOTO REVELAÇÃO</fullName>
                </value>
                <value>
                    <fullName>HIPERMERCADO</fullName>
                </value>
                <value>
                    <fullName>HOTEL</fullName>
                </value>
                <value>
                    <fullName>JÓIAS, RELÓGIOS E BIJOUTERIAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Sexo__c</fullName>
        <label>Sexo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Masculino</fullName>
                </value>
                <value>
                    <fullName>Feminino</fullName>
                </value>
                <value>
                    <fullName>Indefinido</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Contas (Shopping)</relationshipLabel>
        <relationshipName>Contas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Sobrenome__c</fullName>
        <label>Sobrenome</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ativa</fullName>
                </value>
                <value>
                    <fullName>Inativa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_TelefoneCB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telefone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Telefone_Contato__c</fullName>
        <label>Telefone Contato</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TW1_Telefone_comercial__c</fullName>
        <label>Telefone comercial</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo_de_Loja__c</fullName>
        <label>Tipo de Loja</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lojas</fullName>
                </value>
                <value>
                    <fullName>Gastronomia</fullName>
                </value>
                <value>
                    <fullName>Salas</fullName>
                </value>
                <value>
                    <fullName>Rua Do Rio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Torre__c</fullName>
        <label>Torre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OFFICES 1000</fullName>
                </value>
                <value>
                    <fullName>OFFICES 2000</fullName>
                </value>
                <value>
                    <fullName>OFFICES 3000</fullName>
                </value>
                <value>
                    <fullName>TORRE AMARELA</fullName>
                </value>
                <value>
                    <fullName>TORRE AZUL</fullName>
                </value>
                <value>
                    <fullName>TORRE VERDE</fullName>
                </value>
                <value>
                    <fullName>TORRE VERMELHA</fullName>
                </value>
                <value>
                    <fullName>METRO</fullName>
                </value>
                <value>
                    <fullName>ITAQUERA</fullName>
                </value>
                <value>
                    <fullName>CENTRO EMPRESARIAL (3º PISO)</fullName>
                </value>
                <value>
                    <fullName>CENTRO EMPRESARIAL (4º PISO)</fullName>
                </value>
                <value>
                    <fullName>1º PISO</fullName>
                </value>
                <value>
                    <fullName>3º PISO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_UF__c</fullName>
        <label>UF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>